--- a/OnlineShop/Areas/Admin/Views/ProductTypes/Details.cshtml
+++ b/OnlineShop/Areas/Admin/Views/ProductTypes/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model OnlineShop.Models.ProductTypes
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Details";
 }
-<br />
-<h2 class="text-info">Create Product Types</h2>
-<br />
-<br />
-<form asp-action="Create" method="post">
+<br/>
+<h2 class="text-info">Product Types Details</h2>
+<br/>
+<br/>
     <div class="p-4 rounded table-bordered">
         <br />
         <div asp-validation-summary="ModelOnly" class="text-danger">
@@ -16,16 +15,17 @@
                 <label asp-for="ProductType"></label>
             </div>
             <div class="col-md-5">
-                <input asp-for="ProductType" class="form-control" />
+                <input asp-for="ProductType" readonly="readonly" class="form-control" />
             </div>
             <span asp-validation-for="ProductType" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save" />
-            <a asp-action="Index" class="btn btn-success"> Back to List </a>
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
+            <a asp-action="Index" class="btn btn-success">Back to List</a>
+
+            @*<input type="submit" class="btn btn-success" value="Back to List" />*@
         </div>
     </div>
-</form>
 @section Scripts{
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
