--- a/OnlineShop/Areas/Admin/Views/SpecialTag/Create.cshtml
+++ b/OnlineShop/Areas/Admin/Views/SpecialTag/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@model OnlineShop.Models.ProductTypes
+﻿@model OnlineShop.Models.SpecialTag
 @{
     ViewData["Title"] = "Create";
 }
 <br />
-<h2 class="text-info">Create Product Types</h2>
+<h2 class="text-info">Create Special Tag</h2>
 <br />
 <br />
 <form asp-action="Create" method="post">
@@ -13,12 +13,12 @@
         </div>
         <div class="form-group row">
             <div class="col-md-2">
-                <label asp-for="ProductType"></label>
+                <label asp-for="SpecialTags"></label>
             </div>
             <div class="col-md-5">
-                <input asp-for="ProductType" class="form-control" />
+                <input asp-for="SpecialTags" class="form-control" />
             </div>
-            <span asp-validation-for="ProductType" class="text-danger"></span>
+            <span asp-validation-for="SpecialTags" class="text-danger"></span>
         </div>
         <div class="form-group">
             <input type="submit" class="btn btn-primary" value="Save" />
