--- a/OnlineShop/Areas/Admin/Views/SpecialTag/Edit.cshtml
+++ b/OnlineShop/Areas/Admin/Views/SpecialTag/Edit.cshtml
@@ -1,27 +1,28 @@
-﻿@model OnlineShop.Models.ProductTypes
+﻿@model OnlineShop.Models.SpecialTag
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 <br />
-<h2 class="text-info">Create Product Types</h2>
+<h2 class="text-info">Edit Special Tag</h2>
 <br />
 <br />
-<form asp-action="Create" method="post">
+<form asp-action="Edit" method="post">
     <div class="p-4 rounded table-bordered">
         <br />
+        <input type="hidden" asp-for="Id" />
         <div asp-validation-summary="ModelOnly" class="text-danger">
         </div>
         <div class="form-group row">
             <div class="col-md-2">
-                <label asp-for="ProductType"></label>
+                <label asp-for="SpecialTags"></label>
             </div>
             <div class="col-md-5">
-                <input asp-for="ProductType" class="form-control" />
+                <input asp-for="SpecialTags" class="form-control" />
             </div>
-            <span asp-validation-for="ProductType" class="text-danger"></span>
+            <span asp-validation-for="SpecialTags" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <input type="submit" class="btn btn-primary" value="Save" />
+            <input type="submit" class="btn btn-primary" value="Update" />
             <a asp-action="Index" class="btn btn-success"> Back to List </a>
         </div>
     </div>
