--- a/OnlineShop/Views/Shared/_Layout.cshtml
+++ b/OnlineShop/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
         <script src="https://kit.fontawesome.com/76e06f2e6c.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releasesv5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
     </environment>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
     @RenderSection("MyStyle", false)
 </head>
 <body>
@@ -35,9 +36,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="Admin" asp-controller="ProductTypes" asp-action="Index">ProductTypes</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="Admin" asp-controller="ProductTypes" asp-action="Index">Product Types</a></li>
+                    <li><a asp-area="Admin" asp-controller="SpecialTag" asp-action="Index">Special Tag</a></li>
+                    <li><a asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
