--- a/OnlineShop/Areas/Admin/Views/Product/Create.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Product/Create.cshtml
@@ -18,6 +18,7 @@
             <div class="col-md-5">
                 <input asp-for="Name" class="form-control" />
             </div>
+            <p>@ViewBag.message</p>
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group row">
