--- a/OnlineShop/Areas/Admin/Views/Product/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Product/Index.cshtml
@@ -13,47 +13,76 @@
         <a asp-action="Create" class="btn btn-info"><i class="fas fa-plus"></i> &nbsp; New Product</a>
     </div>
 </div>
-<br />
+<br>
+<form method="post">
+    <div class="row">
+        <div class="col-md-3">
+            <input type="number" class="form-control" name="lowAmount" />
+        </div>
+        <div class="col-md-3">
+            <input type="number" class="form-control" name="largeAmount" />
+        </div>
+        <div class="col-md-3">
+            <input type="submit" value="Search" class="btn btn-success" />
+        </div>
+        <div class="col-md-3"></div>
+        <br><br><br>
+    </div>
+</form>
 <div>
-    <table class="table table-striped tab-content">
-        <tr class="text-info">
-            <th>
-                @Html.DisplayNameFor(c => c.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(c => c.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(c => c.ProductColor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(c => c.IsAvailable)
-            </th>
-            <th>
-                @Html.DisplayNameFor(c => c.ProductTypesId)
-            </th>
-            <th>
-                @Html.DisplayNameFor(c => c.SpecialTagId)
-            </th>
-            <th></th>
-            <th></th>
-        </tr>
-        @foreach (var product in Model)
-        {
-            <tr>
-                <td>@product.Name</td>
-                <td>@product.Price</td>
-                <td>@product.ProductColor</td>
-                <td>@product.IsAvailable</td>
-                <td>@product.ProductTypes.ProductType</td>
-                <td>@product.SpecialTag.SpecialTags</td>
-                <td> <partial name="_ProductButtonPartialView" model="@product.Id" /> </td>
+    <table id="myTable" class="table table-striped tab-content">
+        <thead>
+            <tr class="text-info">
+                <th>
+                    @Html.DisplayNameFor(c => c.Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(c => c.Price)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(c => c.ProductColor)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(c => c.IsAvailable)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(c => c.ProductTypesId)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(c => c.SpecialTagId)
+                </th>
+                <th></th>
+                <th></th>
             </tr>
-        }
+        </thead>
+        <tbody>
+            @foreach (var product in Model)
+            {
+                <tr>
+                    <td>@product.Name</td>
+                    <td>@product.Price</td>
+                    <td>@product.ProductColor</td>
+                    <td>@product.IsAvailable</td>
+                    <td>@product.ProductTypes.ProductType</td>
+                    <td>@product.SpecialTag.SpecialTags</td>
+                    <td> <partial name="_ProductButtonPartialView" model="@product.Id" /> </td>
+                </tr>
+            }
+        </tbody>
 
     </table>
 </div>
 @section Scripts{
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                    'copy', 'excel', 'print'
+                ]
+            });
+        });
+    </script>
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     <script type="text/javascript">
     $(function(){
