--- a/OnlineShop/Areas/Admin/Views/ProductTypes/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/ProductTypes/Index.cshtml
@@ -15,27 +15,42 @@
 </div>
 <br />
 <div>
-    <table class="table table-striped tab-content">
-        <tr class="text-info">
-            <th>
-                @Html.DisplayNameFor(c => c.ProductType)
-            </th>
-            <th></th>
-            <th></th>
-        </tr>
-        @foreach (var product in Model)
-        {
-            <tr>
-                <td>@product.ProductType</td>
-                <td> <partial name="_ButtonPartialView" model="@product.Id" /> </td>
+    <table id="myTable" class="table table-striped tab-content">
+        <thead>
+            <tr class="text-info">
+                <th>
+                    @Html.DisplayNameFor(c => c.ProductType)
+                </th>
+                <th></th>
+                <th></th>
             </tr>
-        }
+        </thead>
+        <tbody>
+            @foreach (var product in Model)
+            {
+                <tr>
+                    <td>@product.ProductType</td>
+                    <td> <partial name="_ButtonPartialView" model="@product.Id" /> </td>
+                </tr>
+            }
+        </tbody>
 
     </table>
 </div>
 @section Scripts{
-<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
-<script type="text/javascript">
+    <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable({
+                dom: 'Bfrtip',
+                buttons: [
+                    'copy', 'excel', 'print'
+                ]
+            });
+        });
+    </script>
+    
+    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <script type="text/javascript">
     $(function(){
         var save = '@TempData["save"]'
         var edit = '@TempData["edit"]'
@@ -49,6 +64,6 @@
         if (deleted!='') {
             alertify.error(deleted);
         }
-    })  
-</script>
+    })
+    </script>
 }
